// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepTwoForm should render StepTwoForm for Dutch Auction Crowdsale 1`] = `
<form
  className="st-StepContent_FormFullHeight"
  id="tokenData"
  onSubmit={[Function]}
>
  <div
    className="sw-BorderedBlock sw-BorderedBlock-GeneralSettingsDutchAuction"
  >
    <div
      className="sw-InputField2 "
    >
      <div
        className="sw-FormControlTitle"
      >
        <label
          className="sw-FormControlTitle_Label"
        >
          Name
        </label>
        <div
          className="sw-FormControlTitle_Info"
          tabIndex="-1"
        >
          <span
            className="sw-FormControlTitle_Tooltip"
          >
            The name of your token. Will be used by Etherscan and other tokenbrowsers. Be afraid of trademarks.
          </span>
        </div>
      </div>
      <input
        className="sw-TextField"
        id="name"
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Enter here"
        type="text"
        value="This is a valid name"
      />
    </div>
    <div
      className="sw-InputField2 "
    >
      <div
        className="sw-FormControlTitle"
      >
        <label
          className="sw-FormControlTitle_Label"
        >
          Ticker
        </label>
        <div
          className="sw-FormControlTitle_Info"
          tabIndex="-1"
        >
          <span
            className="sw-FormControlTitle_Tooltip"
          >
            The five letter ticker for your token. There are 11,881,376 combinations for 26 english letters. Be hurry.
          </span>
        </div>
      </div>
      <input
        className="sw-TextField"
        id="ticker"
        name="ticker"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Enter here"
        type="text"
        value="TTK"
      />
    </div>
    <div
      className="sw-InputField2 "
    >
      <div
        className="sw-FormControlTitle"
      >
        <label
          className="sw-FormControlTitle_Label"
        >
          Decimals
        </label>
        <div
          className="sw-FormControlTitle_Info"
          tabIndex="-1"
        >
          <span
            className="sw-FormControlTitle_Tooltip"
          >
            Refers to how divisible a token can be, from 0 (not at all divisible) to 18 (pretty much continuous).
          </span>
        </div>
      </div>
      <input
        className="sw-TextField"
        disabled={false}
        id="decimals"
        max="18"
        min="0"
        name="decimals"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Enter here"
        type="number"
        value="14"
      />
    </div>
    <div
      className="sw-InputField2 "
    >
      <div
        className="sw-FormControlTitle"
      >
        <label
          className="sw-FormControlTitle_Label"
        >
          Supply
        </label>
        <div
          className="sw-FormControlTitle_Info"
          tabIndex="-1"
        >
          <span
            className="sw-FormControlTitle_Tooltip"
          >
            The total supply of the token
          </span>
        </div>
      </div>
      <input
        className="sw-TextField"
        id="supply"
        min="0"
        name="supply"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Enter here"
        type="number"
        value=""
      />
    </div>
  </div>
  <div
    className="st-StepContent_Buttons"
  >
    <button
      className="sw-ButtonBack "
      onClick={[Function]}
      type="button"
    >
      Back
    </button>
    <button
      className="sw-ButtonContinue "
      disabled={true}
      type="submit"
    >
      <span
        className="sw-ButtonContinue_Text"
      >
        Continue
      </span>
    </button>
  </div>
</form>
`;

exports[`StepTwoForm should render StepTwoForm for Minted Capped Crowdsale 1`] = `
<form
  className="st-StepContent_FormFullHeight"
  id="tokenData"
  onSubmit={[Function]}
>
  <div
    className="sw-BorderedBlock sw-BorderedBlock-GeneralSettingsWhitelistCapped"
  >
    <div
      className="sw-InputField2 "
    >
      <div
        className="sw-FormControlTitle"
      >
        <label
          className="sw-FormControlTitle_Label"
        >
          Name
        </label>
        <div
          className="sw-FormControlTitle_Info"
          tabIndex="-1"
        >
          <span
            className="sw-FormControlTitle_Tooltip"
          >
            The name of your token. Will be used by Etherscan and other tokenbrowsers. Be afraid of trademarks.
          </span>
        </div>
      </div>
      <input
        className="sw-TextField"
        id="name"
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Enter here"
        type="text"
        value="This is a valid name"
      />
    </div>
    <div
      className="sw-InputField2 "
    >
      <div
        className="sw-FormControlTitle"
      >
        <label
          className="sw-FormControlTitle_Label"
        >
          Ticker
        </label>
        <div
          className="sw-FormControlTitle_Info"
          tabIndex="-1"
        >
          <span
            className="sw-FormControlTitle_Tooltip"
          >
            The five letter ticker for your token. There are 11,881,376 combinations for 26 english letters. Be hurry.
          </span>
        </div>
      </div>
      <input
        className="sw-TextField"
        id="ticker"
        name="ticker"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Enter here"
        type="text"
        value="TTK"
      />
    </div>
    <div
      className="sw-InputField2 "
    >
      <div
        className="sw-FormControlTitle"
      >
        <label
          className="sw-FormControlTitle_Label"
        >
          Decimals
        </label>
        <div
          className="sw-FormControlTitle_Info"
          tabIndex="-1"
        >
          <span
            className="sw-FormControlTitle_Tooltip"
          >
            Refers to how divisible a token can be, from 0 (not at all divisible) to 18 (pretty much continuous).
          </span>
        </div>
      </div>
      <input
        className="sw-TextField"
        disabled={false}
        id="decimals"
        max="18"
        min="0"
        name="decimals"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Enter here"
        type="number"
        value="14"
      />
    </div>
  </div>
  <div>
    <h2
      className="sw-BorderedBlockTitle"
    >
      Reserved tokens
    </h2>
    <div
      className="sw-BorderedBlock sw-BorderedBlock-ReservedTokensWhitelistCapped"
    >
      <div
        className="sw-InputField sw-InputField-ReservedTokensAddress"
      >
        <div
          className="sw-FormControlTitle"
        >
          <label
            className="sw-FormControlTitle_Label"
          >
            Address
          </label>
          <div
            className="sw-FormControlTitle_Info"
            tabIndex="-1"
          >
            <span
              className="sw-FormControlTitle_Tooltip"
            >
              Address where to send reserved tokens.
            </span>
          </div>
        </div>
        <input
          className="sw-TextField"
          onChange={[Function]}
          placeholder="Enter here"
          type="text"
          value=""
        />
        
      </div>
      <div
        className="sw-RadioInputField sw-RadioInputField-ReservedTokensDimension"
      >
        <div
          className="sw-FormControlTitle"
        >
          <label
            className="sw-FormControlTitle_Label"
          >
            Dimension
          </label>
          <div
            className="sw-FormControlTitle_Info"
            tabIndex="-1"
          >
            <span
              className="sw-FormControlTitle_Tooltip"
            >
              Fixed amount or % of crowdsaled tokens. Will be deposited to the account after finalization of the crowdsale.
            </span>
          </div>
        </div>
        <div
          className="sw-RadioInputField_ButtonsContainer"
        >
          <label
            className="sw-RadioInputField_Label"
          >
            <input
              checked={true}
              className="sw-RadioInputField_Input"
              id="tokens"
              onChange={[Function]}
              type="radio"
              value="tokens"
            />
            <span
              className="sw-RadioInputField_Button"
            >
              Tokens
            </span>
          </label>
          <label
            className="sw-RadioInputField_Label"
          >
            <input
              checked={false}
              className="sw-RadioInputField_Input"
              id="percentage"
              onChange={[Function]}
              type="radio"
              value="percentage"
            />
            <span
              className="sw-RadioInputField_Button"
            >
              Percentage
            </span>
          </label>
        </div>
      </div>
      <div
        className="sw-NumericInputAndButtonContainer sw-NumericInputAndButtonContainer-RerservedTokensValue"
      >
        <div
          className="sw-NumericInput "
        >
          <div
            className="sw-FormControlTitle"
          >
            <label
              className="sw-FormControlTitle_Label"
            >
              Value
            </label>
            <div
              className="sw-FormControlTitle_Info"
              tabIndex="-1"
            >
              <span
                className="sw-FormControlTitle_Tooltip"
              >
                Value in tokens. Don't forget to click + button for each reserved token.
              </span>
            </div>
          </div>
          <input
            className="sw-TextField"
            min="0.00000000000001"
            onChange={[Function]}
            onKeyPress={[Function]}
            onPaste={[Function]}
            placeholder="Enter here"
            step="1"
            type="number"
            value=""
          />
          
        </div>
        <button
          className="sw-ButtonPlus "
          onClick={[Function]}
          type="button"
        />
      </div>
      <div
        className="sw-ReservedTokensListControls"
      >
        <span>
          Dropzone
        </span>
        <button
          className="sw-ButtonCSV sw-ButtonCSV-downloadcsv m-r-0"
          onClick={[Function]}
          type="button"
        >
          Download CSV template
        </button>
      </div>
    </div>
  </div>
  <div
    className="st-StepContent_Buttons"
  >
    <button
      className="sw-ButtonBack "
      onClick={[Function]}
      type="button"
    >
      Back
    </button>
    <button
      className="sw-ButtonContinue "
      disabled={false}
      type="submit"
    >
      <span
        className="sw-ButtonContinue_Text"
      >
        Continue
      </span>
    </button>
  </div>
</form>
`;
